Make current track applet react to config changes immediately.

BUG: 262008
FIXED-IN: 2.4.2